[package]
name = "paytube-rs"
description = "Pay channel using Solana SVM API"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-bpf-loader-program = "2.2.7"
solana-client = "2.2.7"
solana-compute-budget = "2.2.7"
solana-fee-structure = "=2.2.1"
solana-logger = "2.3.1"
solana-program-runtime = "2.2.7"
solana-sdk = "2.2.2"
solana-svm = "2.2.7"
solana-system-program = "2.2.7"
spl-associated-token-account = "6.0.0"
spl-token = "8.0.0"
termcolor = "1.4.1"
agave-feature-set = "2.2.7"

[dev-dependencies]
solana-test-validator = "2.2.7"
